
* Verilator 3.869 devel

****  Suppress COMBDLY when inside always_latch, bug864. [Iztok Jeras]

****  Support cast operator with expression size, bug865. [Iztok Jeras]

****  Fix member select error broke in 3.868, bug867. [Iztok Jeras]

****  Fix $sccanf from string, bug866. [David Pierce]

****  Fix VM_PARALLEL_BUILDS broke in 3.868, bug870. [Hiroki Honda]


* Verilator 3.868 2014-12-20

**    New verilator_coverage program added to replace SystemPerl's vcoverage.

**    PSL support was removed, please use System Verilog assertions.

**    SystemPerl mode is deprecated and now untested.

***   Support enum.first/name and similar methods, bug460, bug848.

***   Add 'string' printing and comparisons, bug746, bug747, etc.

***   Inline C functions that are used only once, msg1525. [Jie Xu]

***   Fix tracing SystemC signals with structures, bug858. [Eivind Liland]
      Note that SystemC traces will no longer show the signals
      in the wrapper, they can be seen one level further down.

****  Add --stats-vars, bug851. [Jeremy Bennett]

****  Fix bare generates in interfaces, bug789. [Bob Newgard]

****  Fix underscores in real literals, bug863. [Jonathon Donaldson]


* Verilator 3.866 2014-11-15

***   Fix +define+A+B to define A and B to match other simulators, bug847. [Adam Krolnik]

***   Add optimization of wires from arrayed cells, msg1447. [Jie Xu]

***   Add optimization of operators between concats, msg1447. [Jie Xu]

***   Add public enums, bug833. [Jonathon Donaldson]

***   Trace_off now operates on cells, bug826. [Lane Brooks]

****  Fix public parameters in unused packages, bug804. [Jonathon Donaldson]

****  Fix select when partially out-of-bound, bug823. [Cliffort Wolf]

****  Fix generate unrolling with function call, bug830. [Steven Slatter]

****  Fix cast-to-size context-determined sizing, bug828. [Geoff Barrett]

****  Fix not tracing modules following primitives, bug837. [Jie Xu]
