@@ -37,10 +37,18 @@ module t (/*AUTOARG*/
 endmodule
 
 module sub
+`ifdef NANSI  // bug868
+  (
+   isub, i_value
+   );
+   ifc.out_modport isub;   // Note parenthesis are not legal here
+   input integer i_value;
+`else
   (
    ifc.out_modport isub,
    input integer i_value
    );
+`endif
 
    always @* begin
       isub.value = i_value;
