@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix VM_PARALLEL_BUILDS broke in 3.868, bug870. [Hiroki Honda]
 
+****  Fix non-ANSI modport instantiations, bug868. [Kevin Thompson]
+
 
 * Verilator 3.868 2014-12-20
 
